@@ -1,3 +1,9 @@
+2001-02-17  Philip Blundell  <philb@gnu.org>
+
+	From 2001-01-23  H.J. Lu  <hjl@gnu.org>
+	* pe.h (struct external_PEI_DOS_hdr): New.
+	(struct external_PEI_IMAGE_hdr): New.
+
 2000-12-11  Alan Modra  <alan@linuxcare.com.au>
 
 	* ti.h (OCTETS_PER_BYTE_POWER): Change #warning to #error.
